--- a/style.css
+++ b/style.css
@@ -31,3 +31,12 @@ input {
     padding: 30px 0px 15px;
     text-align: center;
 }
+
+.equation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: inherit;
+    font-size: 20px;
+}
